feat: adiciona modulo de fenomeno e renomeia modulo account
