# apps/api/src/firetrack/account/urls.py
@@ -1,7 +1,0 @@
-from django.urls import path
-
-from firetrack.account import views
-
-urlpatterns = [
-    path("", views.account_index),
-]
