# apps/api/src/firetrack/account/views.py
@@ -1,5 +1,0 @@
-from django.http import JsonResponse
-
-
-def account_index(_):
-    return JsonResponse({"module": "account"})
