# apps/api/src/firetrack/conta/apps.py
@@ -1,6 +1,6 @@
 from django.apps import AppConfig
 
 
-class AccountConfig(AppConfig):
+class ContaConfig(AppConfig):
     default_auto_field = "django.db.models.BigAutoField"
-    name = "firetrack.account"
+    name = "firetrack.conta"
