# apps/api/src/firetrack/conta/views.py
@@ -1,0 +1,5 @@
+from django.http import JsonResponse
+
+
+def conta_index(_):
+    return JsonResponse({ "conta": "conta" })
