# apps/api/src/firetrack/fenomeno/urls.py
@@ -1,0 +1,7 @@
+from django.urls import path
+
+from firetrack.conta import views
+
+urlpatterns = [
+    path("", views.conta_index),
+]
